--- a/Alexey/roles/ansible-configs/roles/haproxy/templates/haproxy.cfg.j2
+++ b/Alexey/roles/ansible-configs/roles/haproxy/templates/haproxy.cfg.j2
@@ -30,13 +30,10 @@ global
       maxconn                 3000
  
 frontend public
-    {% for srv in backends %}
-     bind {{hostvars[srv].ansible_eth1.ipv4.address}}:80
-    {% endfor %}
+     bind {{ansible_eth1.ipv4.address}}:80
     default_backend nginx
- 
+
 backend nginx
-  {% for srv in frontends %}
-   server {{hostvars[srv].ansible_fqdn}} {{hostvars[srv].ansible_eth1.ipv4.address}}:80 weight {{hostvars[srv].ha_weight}} check
-  {% endfor %}
-    
+  {% for inventory_hostname in groups['backends'] %}
+   server {{hostvars[inventory_hostname].ansible_fqdn}} {{hostvars[inventory_hostname].ansible_eth1.ipv4.address}}:80 weight {{hostvars[inventory_hostname].ha_weight}} check
+  {% endfor %} 
