--- a/Alexey/roles/ansible-configs/roles/nginx/templates/nginx.conf.j2
+++ b/Alexey/roles/ansible-configs/roles/nginx/templates/nginx.conf.j2
@@ -1,5 +1,5 @@
  
-user nginx;
+user {{nginx_user}} {{nginx_group}};
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
@@ -20,7 +20,7 @@ http {
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
     server {
-        listen       {{hostvars[inventory_hostname].ansible_eth1.ipv4.address}} default_server;
+        listen       {{ansible_eth1.ipv4.address}} default_server;
         server_name  _;
         root         /usr/share/nginx/html;
         include /etc/nginx/default.d/*.conf;
